<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/info">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="16"
            android:hint="Имя: "
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="16"
            android:textColor="@color/black"
            android:hint="Фамилия: "
            app:layout_constraintEnd_toEndOf="@+id/tName"
            app:layout_constraintStart_toStartOf="@+id/tName"
            app:layout_constraintTop_toBottomOf="@+id/tName" />

        <TextView
            android:id="@+id/tPatronymic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="16"
            android:textColor="@color/black"
            android:hint="Отчество: "
            app:layout_constraintEnd_toEndOf="@+id/tSurname"
            app:layout_constraintStart_toStartOf="@+id/tSurname"
            app:layout_constraintTop_toBottomOf="@+id/tSurname" />

        <TextView
            android:id="@+id/tDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="16"
            android:textColor="@color/black"
            android:hint="Дата рождения: "
            app:layout_constraintEnd_toEndOf="@+id/tPatronymic"
            app:layout_constraintStart_toStartOf="@+id/tPatronymic"
            app:layout_constraintTop_toBottomOf="@+id/tPatronymic" />

        <TextView
            android:id="@+id/tJobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="16"
            android:textColor="@color/black"
            android:hint="Должность: "
            app:layout_constraintEnd_toEndOf="@+id/tDateOfBirth"
            app:layout_constraintStart_toStartOf="@+id/tDateOfBirth"
            app:layout_constraintTop_toBottomOf="@+id/tDateOfBirth" />

        <TextView
            android:id="@+id/tRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="16"
            android:textColor="@color/black"
            android:hint="Роль: "
            app:layout_constraintEnd_toEndOf="@+id/tJobTitle"
            app:layout_constraintStart_toStartOf="@+id/tJobTitle"
            app:layout_constraintTop_toBottomOf="@+id/tJobTitle"
            />

        <TextView
            android:id="@+id/tUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="16"
            android:textColor="@color/black"
            android:hint="Логин: "
            app:layout_constraintEnd_toEndOf="@+id/tRole"
            app:layout_constraintStart_toStartOf="@+id/tRole"
            app:layout_constraintTop_toBottomOf="@+id/tRole"
            />

        <TextView
            android:id="@+id/tEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="16"
            android:textColor="@color/black"
            android:hint="Email: "
            app:layout_constraintEnd_toEndOf="@+id/tUsername"
            app:layout_constraintStart_toStartOf="@+id/tUsername"
            app:layout_constraintTop_toBottomOf="@+id/tUsername" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/corresponding">


        <Button
            android:id="@+id/btCorrespondence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/correspondence"
            app:layout_constraintStart_toStartOf="@+id/etFind"
            app:layout_constraintTop_toBottomOf="@+id/etFind" />

        <EditText
            android:id="@+id/etFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:ems="12"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="Поиск сотрудников"/>

        <Button
            android:id="@+id/btFindFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/show_friend"
            app:layout_constraintEnd_toEndOf="@+id/btFind"
            app:layout_constraintTop_toBottomOf="@+id/btFind" />

        <Button
            android:id="@+id/btFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/find"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFriends"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btCorrespondence"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCorrespondence"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btCorrespondence"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/department">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewEmployee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/registration">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>